# drone_ws

./: .gitignore  1_run.sh  2_run.sh  3_run.sh  4_run.sh  5_run.sh  6_run.sh  7_run.sh  8_run.sh  9_run.sh  README.md  install.sh  log.txt  missionPlanner.sh  rosdep.sh  run.sh  source.sh
.catkin_tools/profiles/default/: devel_collisions.txt
iod/web/: helloWorld.html
logs/avoidance/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/bspline/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/bspline_opt/: build.make.000.log.stderr
logs/clover/: build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr
logs/clover_simulation/: build.cmake.000.log.stderr
logs/controller/: build.cmake.000.log.stderr
logs/geometric_controller/: build.cmake.001.log.stderr  build.make.002.log.stderr
logs/global_planner/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/hemd/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/local_planner/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/mav_msgs/: build.cmake.001.log.stderr
logs/mavlink_serial_client/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/mavros/: build.make.000.log.stderr  build.make.002.log.stderr
logs/mavros_extras/: build.make.000.log.stderr  build.make.002.log.stderr
logs/mavtest/: build.cmake.000.log.stderr
logs/mrf_dynamics/: build.cmake.001.log.stderr
logs/path_searching/: build.make.000.log.stderr
logs/pca_linedetector/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/plan_env/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/plan_manage/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/poly_traj/: build.make.000.log.stderr
logs/px4flow/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/quadrotor_msgs/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/realsense_gazebo_plugin/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/rosbridge_library/: build.cmake.000.log.stderr
logs/rrt-planning/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/safe_landing_planner/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/traj_utils/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/trajectory_publisher/: build.make.000.log.stderr  build.make.002.log.stderr
logs/waypoint_generator/: build.make.000.log.stderr
src/: windy.world
src/.warehouse-quad/: .gitignore  .project  README.md
src/.warehouse-quad/controller/: CMakeLists.txt
src/.warehouse-quad/controller/src/: controller.cpp
src/.warehouse-quad/hemd/: CMakeLists.txt  CONTRIBUTING.md
src/.warehouse-quad/hemd/include/: kalman.h  marker.h
src/.warehouse-quad/hemd/launch/: zestimator.launch
src/.warehouse-quad/hemd/msg/: line.msg  markerInfo.msg  quadstate.msg
src/.warehouse-quad/hemd/src/: ekf.cpp  main.cpp  marker.cpp  qr.cpp  sonar.cpp
src/.warehouse-quad/pca_linedetector/: CMakeLists.txt
src/.warehouse-quad/pca_linedetector/include/pca_linedetector/: CVInclude.h
src/.warehouse-quad/pca_linedetector/src/: pcadetector_node.cxx
src/.warehouse-quad/utils/: warehouse_quad.perspective
src/Indoor-Navigation-with-a-Quadcopter/: CMakeLists.txt
src/clover/clover_simulation/rviz/: rviz.rviz
src/clover/webpages/: clover.html
src/mavros_offboard_control/uav_control/scripts/: waypoint.py~
src/mavros_offboard_control/uav_control/src/: UAVTakeoff.cpp
src/mavtest/: CMakeLists.txt  package.xml
src/mavtest/scripts/: mavsys.py
src/mavtest/src/: offb_node.cpp  set_position_demo.py  simple_behaviour.cpp
src/mavtest/storage/: 1024_iris_depth_camera  depth_camera.sdf
src/px-ros-pkg/drivers/mavlink_serial_client/: CMakeLists.txt
src/px-ros-pkg/drivers/px4flow/: CMakeLists.txt
src/px4_teleop/: CMakeLists.txt  Doxyfile  README.md
src/px4_teleop/config/: f310.yaml  f310_binding.yaml  f710.yaml  u3312s.yaml
src/px4_teleop/include/: px4_teleop_cmds.hpp
src/px4_teleop/launch/: teleop_joy_hexa_real.launch  teleop_joy_sim.launch
src/px4_teleop/script/: px4_teleop_key.py
src/px4_teleop/src/: joy_publisher.cpp  px4_teleop_com.cpp  px4_teleop_joy.cpp
src/ros_led/: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md
src/ros_led/led_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml  sim.py
src/ros_led/led_msgs/msg/: LEDState.msg  LEDStateArray.msg
src/ros_led/led_msgs/srv/: SetLED.srv  SetLEDs.srv
src/ros_led/ws281x/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ros_led/ws281x/examples/: example.py
src/ros_led/ws281x/launch/: example.launch
src/ros_led/ws281x/scripts/: postinst.in
src/ros_led/ws281x/src/: ws281x_node.cpp
src/ros_led/ws281x/srv/: SetGamma.srv
